# mac-gss-token-helper

./: .gitignore  .goreleaser.yaml  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: release.yml
src/: gss.rs  gss_ffi.rs  main.rs
